rapport/tp1/pizza-api/deployment/pizza-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-api
  template:
    metadata:
      labels:
        app: pizza-api
    spec:
      containers:
        - name: pizza-api
          image: pizza-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          # Injection des variables d'environnement depuis ConfigMap
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: pizza-api-service
spec:
  selector:
    app: pizza-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
